// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders correctly when user is authenticated (snapshot) 1`] = `
<div>
  <header
    class="w-full py-4 flex justify-between items-center shadow-sm"
  >
    <nav
      class="z-40 h-auto justify-center data-[menu-open=true]:border-none sticky top-0 inset-x-0 backdrop-blur-lg data-[menu-open=true]:backdrop-blur-xl backdrop-saturate-150 bg-background/70 flex items-center w-[1282px] mx-auto"
      style="--navbar-height: 4rem;"
    >
      <header
        class="z-40 flex px-6 gap-4 w-full flex-row relative flex-nowrap items-center justify-between h-[var(--navbar-height)] max-w-[1024px]"
      >
        <a
          class="text-4xl font-extrabold font-serif"
          href="/"
        >
          FASCO
        </a>
        <ul
          class="gap-4 h-full flex-row flex-nowrap data-[justify=start]:justify-start data-[justify=start]:flex-grow data-[justify=start]:basis-0 data-[justify=center]:justify-center data-[justify=end]:justify-end data-[justify=end]:flex-grow data-[justify=end]:basis-0 flex items-center justify-between w-[432px]"
          data-justify="start"
        >
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/"
          >
            Home
          </a>
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/shop"
          >
            Shop
          </a>
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/product"
          >
            Product
          </a>
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/cart"
          >
            Cart
          </a>
        </ul>
        <ul
          class="h-full flex-row flex-nowrap data-[justify=start]:justify-start data-[justify=start]:flex-grow data-[justify=start]:basis-0 data-[justify=center]:justify-center data-[justify=end]:justify-end data-[justify=end]:flex-grow data-[justify=end]:basis-0 flex items-center w-[300px] gap-7 justify-end relative"
          data-justify="start"
        >
          <svg
            class="cursor-not-allowed"
            fill="none"
            height="18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#a)"
            >
              <path
                d="m17.877 16.485-4.268-4.268a.417.417 0 0 0-.299-.123h-.464A7.311 7.311 0 0 0 7.312 0 7.311 7.311 0 0 0 0 7.313a7.311 7.311 0 0 0 12.094 5.533v.464c0 .113.046.218.123.299l4.268 4.268a.422.422 0 0 0 .597 0l.795-.795a.422.422 0 0 0 0-.597ZM7.313 12.938a5.623 5.623 0 0 1-5.625-5.626 5.623 5.623 0 0 1 5.625-5.625 5.623 5.623 0 0 1 5.625 5.625 5.623 5.623 0 0 1-5.626 5.625Z"
                fill="#484848"
                stroke="#484848"
                stroke-width="0.035"
              />
            </g>
            <defs>
              <clippath
                id="a"
              >
                <path
                  d="M0 0h18v18.001H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
          <svg
            aria-expanded="false"
            aria-haspopup="true"
            class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased cursor-pointer"
            data-react-aria-pressable="true"
            data-slot="trigger"
            fill="none"
            height="22"
            id="react-aria-«r0»"
            tabindex="0"
            type="button"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#a)"
            >
              <path
                d="M13.5 11.875c-1.121 0-1.66.625-3.5.625s-2.375-.625-3.5-.625a5.251 5.251 0 0 0-5.25 5.25v1C1.25 19.16 2.09 20 3.125 20h13.75c1.035 0 1.875-.84 1.875-1.875v-1a5.251 5.251 0 0 0-5.25-5.25Zm3.375 6.25H3.125v-1A3.38 3.38 0 0 1 6.5 13.75c.57 0 1.496.625 3.5.625 2.02 0 2.926-.625 3.5-.625a3.38 3.38 0 0 1 3.375 3.375v1ZM10 11.25a5.626 5.626 0 0 0 5.625-5.625A5.626 5.626 0 0 0 10 0a5.626 5.626 0 0 0-5.625 5.625A5.626 5.626 0 0 0 10 11.25Zm0-9.375a3.756 3.756 0 0 1 3.75 3.75A3.756 3.756 0 0 1 10 9.375a3.756 3.756 0 0 1-3.75-3.75A3.756 3.756 0 0 1 10 1.875Z"
                fill="#484848"
                stroke="#484848"
                stroke-width="0.039"
              />
            </g>
            <defs>
              <clippath
                id="a"
              >
                <path
                  d="M0 0h20v20H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
          <svg
            class="cursor-not-allowed"
            fill="none"
            height="20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m18.337 7.066-5.073-.74-2.267-4.597c-.407-.82-1.584-.83-1.993 0L6.736 6.326l-5.073.74C.753 7.198.39 8.319 1.05 8.962l3.67 3.576-.868 5.052c-.156.913.805 1.597 1.61 1.17l4.54-2.385 4.537 2.385c.806.424 1.768-.257 1.611-1.17l-.868-5.052 3.67-3.576c.66-.643.296-1.764-.614-1.896Zm-4.844 4.889.823 4.805L10 14.493 5.684 16.76l.823-4.805-3.493-3.403 4.826-.701L10 3.476l2.16 4.375 4.826.701-3.493 3.403Z"
              fill="#484848"
            />
          </svg>
          <svg
            class="cursor-pointer"
            fill="none"
            height="20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#a)"
            >
              <path
                d="M15 5c0-2.757-2.243-5-5-5S5 2.243 5 5H1.25v11.875C1.25 18.601 2.65 20 4.375 20h11.25c1.726 0 3.125-1.4 3.125-3.125V5H15Zm-5-3.125A3.129 3.129 0 0 1 13.125 5h-6.25A3.129 3.129 0 0 1 10 1.875Zm6.875 15c0 .69-.56 1.25-1.25 1.25H4.375c-.69 0-1.25-.56-1.25-1.25v-10H5v1.563a.937.937 0 1 0 1.875 0V6.875h6.25v1.563a.937.937 0 1 0 1.875 0V6.875h1.875v10Z"
                fill="#484848"
                stroke="#484848"
                stroke-width="0.039"
              />
            </g>
            <defs>
              <clippath
                id="a"
              >
                <path
                  d="M0 0h20v20H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
        </ul>
      </header>
    </nav>
  </header>
</div>
`;

exports[`Header renders correctly when user is not authenticated (snapshot) 1`] = `
<div>
  <header
    class="w-full py-4 flex justify-between items-center shadow-sm"
  >
    <nav
      class="z-40 h-auto justify-center data-[menu-open=true]:border-none sticky top-0 inset-x-0 backdrop-blur-lg data-[menu-open=true]:backdrop-blur-xl backdrop-saturate-150 bg-background/70 flex items-center w-[1282px] mx-auto"
      style="--navbar-height: 4rem;"
    >
      <header
        class="z-40 flex px-6 gap-4 w-full flex-row relative flex-nowrap items-center justify-between h-[var(--navbar-height)] max-w-[1024px]"
      >
        <a
          class="text-4xl font-extrabold font-serif"
          href="/"
        >
          FASCO
        </a>
        <ul
          class="gap-4 h-full flex-row flex-nowrap data-[justify=start]:justify-start data-[justify=start]:flex-grow data-[justify=start]:basis-0 data-[justify=center]:justify-center data-[justify=end]:justify-end data-[justify=end]:flex-grow data-[justify=end]:basis-0 flex items-center justify-between w-[432px]"
          data-justify="start"
        >
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/"
          >
            Home
          </a>
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/shop"
          >
            Shop
          </a>
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/product"
          >
            Product
          </a>
          <a
            class="transition-colors text-charcoal hover:text-black"
            href="/cart"
          >
            Cart
          </a>
        </ul>
        <ul
          class="h-full flex-row flex-nowrap data-[justify=start]:justify-start data-[justify=start]:flex-grow data-[justify=start]:basis-0 data-[justify=center]:justify-center data-[justify=end]:justify-end data-[justify=end]:flex-grow data-[justify=end]:basis-0 flex items-center w-[300px] gap-7 justify-end relative"
          data-justify="start"
        >
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-hidden data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 gap-2 [&>svg]:max-w-[theme(spacing.8)] motion-reduce:transition-none data-[hover=true]:opacity-hover w-full py-3 rounded-[10px] border border-border-input-100 transition hover:delay-75 bg-black hover:bg-secondary text-white text-base"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            Sign in
          </button>
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-hidden data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 gap-2 [&>svg]:max-w-[theme(spacing.8)] motion-reduce:transition-none data-[hover=true]:opacity-hover w-full py-3 rounded-[10px] border border-border-input-100 transition hover:delay-75 bg-black hover:bg-secondary text-white text-base"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            Sign Up
          </button>
        </ul>
      </header>
    </nav>
  </header>
</div>
`;
